// SPDX-FileCopyrightText: (C) 2023 Intel Corporation
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package resource.v2;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "resource/v2/endpoint_resource.proto";
import "validate/validate.proto";

// Provides API to list endpoints.
service EndpointsService {
  // Gets a list of all endpoints for an application of a deployment in a cluster.
  rpc ListAppEndpoints(ListAppEndpointsRequest) returns (ListAppEndpointsResponse) {
    option (google.api.http) = {get: "/resource.orchestrator.apis/v2/endpoints/{app_id}/{cluster_id}"};
  }
}

// Request message for ListAppEndpoints method
message ListAppEndpointsRequest {
  // Application ID
  string app_id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {
      min_len: 1
      max_len: 80
      pattern: "^[a-z0-9][a-z0-9-]{0,78}[a-z0-9]{0,1}$"
    }
  ];
  // Cluster ID
  string cluster_id = 2 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string = {
      min_len: 1
      max_len: 40
      pattern: "^[a-z0-9][a-z0-9-]{0,38}[a-z0-9]{0,1}$"
    }
  ];
}

// Response message for the ListAppEndpoints method.
message ListAppEndpointsResponse {
  // List of services.
  repeated resource.v2.AppEndpoint app_endpoints = 1 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (validate.rules).repeated = {max_items: 100}
  ];
}
